--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,16 @@ PROVIDER=openrouter
 # ── Docker Compose ───────────────────────────────────────────
 # Host port mapping (used by docker-compose.yml)
 # HOST_PORT=3000
+
+# ── Z.AI GLM Coding Plan ───────────────────────────────────────
+# Z.AI provides GLM models (glm-4.5, glm-4.6, glm-4.7, glm-5).
+# API key format: id.secret (e.g., abc123.xyz789)
+# 
+# Usage:
+#   zeroclaw onboard --provider zai --api-key YOUR_ZAI_API_KEY
+#
+# Or set the environment variable:
+# ZAI_API_KEY=your-id.secret
+#
+# Available models: glm-4.5, glm-4.5-air, glm-4.6, glm-4.7, glm-5
+# See docs/zai-glm-setup.md for detailed configuration.
